fix padding on logo on mobile

--- a/src/styles/nav/nav.scss
+++ b/src/styles/nav/nav.scss
@@ -65,6 +65,7 @@
     gap: 0px;
     color: black;
     padding-top: 5px;
+    padding-left: 0px;
 
     .button-wrapper {
       gap: 5px;
